--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       const months = ['January', 'February', 'March', 'April', 'May', 'June', 
                      'July', 'August', 'September', 'October', 'November', 'December'];
       const month = months[Math.floor(Math.random() * months.length)];
-      const email = `${firstName.toLowerCase()}.${lastName.toLowerCase().replace(/\s+/g, '')}@student.edu`;
+      const email = `${firstName.toLowerCase()}.${lastName.toLowerCase().replace(/\s+/g, '')}@bbdnitm.ac.in`;
 
       const jsScript = `(async () => {
   const delay = ms => new Promise(r => setTimeout(r, ms));
