--- a/card-us.html
+++ b/card-us.html
@@ -200,7 +200,7 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
-            padding: 4px;
+            padding: 1px;
         }
 
         .university-name {
@@ -410,18 +410,11 @@
 
         const universities = [
             {
-                name: 'Harvard University',
-                logo: 'https://i.ibb.co/rGD4zcCW/image.png',
-                code: 'H',
-                fullName: 'Harvard University',
-                emailDomain: 'harvard.edu'
-            },
-            {
-                name: 'Stanford University', 
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Stanford_Cardinal_logo.svg/1200px-Stanford_Cardinal_logo.svg.png',
-                code: 'S',
-                fullName: 'Stanford University',
-                emailDomain: 'stanford.edu'
+                name: 'Santa Fe College',
+                logo: 'https://upload.wikimedia.org/wikipedia/en/4/45/Seal_of_Santa_Fe_College.svg',
+                code: 'SF',
+                fullName: 'Santa Fe College',
+                emailDomain: 'sfcollege.edu'
             }
         ];
 
