--- a/card-us.html
+++ b/card-us.html
@@ -392,7 +392,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Santa Fe College</h1>
+            <h1>Ai không làm được ib tele: helloevery18 hoặc fb: <a href="https://www.facebook.com/profile.php?id=61571564225016">Đây</a></h1>
             <p>Student ID Card Generator</p>
         </div>
 
